make-a-wish-salesforce/src/objects/VisualAntidote__Submission_Draft__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Document_Ids__c</fullName>
        <label>Document Ids</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Submission Drafts</relationshipLabel>
        <relationshipName>Submission_Drafts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Is_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML2__c</fullName>
        <label>Submitted Data XML2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML3__c</fullName>
        <label>Submitted Data XML3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Data_XML__c</fullName>
        <label>Submitted Data XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Prefill_Obj_Id__c</fullName>
        <label>Submitted Prefill Obj Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Submitted_Prefill_Obj_Info__c</fullName>
        <label>Submitted Prefill Obj Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Submission Draft</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FDS-{0000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>